internal/nlp/antlr/parser/ugh_parser.go
// Code generated from /home/michael/code/ugh/internal/nlp/antlr/UghParser.g4 by ANTLR 4.13.2. DO NOT EDIT.

package parser // UghParser
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type UghParser struct {
	*antlr.BaseParser
}

var UghParserParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func ughparserParserInit() {
	staticData := &UghParserParserStaticData
	staticData.LiteralNames = []string{
		"", "", "", "", "", "'#'", "'@'", "", "", "", "", "", "", "", "", "",
		"", "", "", "", "", "", "", "", "", "", "'!'", "'+'", "'-'", "':'",
		"','", "'('", "')'", "'&&'", "'||'",
	}
	staticData.SymbolicNames = []string{
		"", "QUOTED", "HASH_NUMBER", "PROJECT_TAG", "CONTEXT_TAG", "PROJECT_TAG_PREFIX",
		"CONTEXT_TAG_PREFIX", "SET_FIELD", "ADD_FIELD", "REMOVE_FIELD", "CLEAR_FIELD",
		"KW_ADD", "KW_CREATE", "KW_NEW", "KW_SET", "KW_EDIT", "KW_UPDATE", "KW_FIND",
		"KW_SHOW", "KW_LIST", "KW_FILTER", "KW_VIEW", "KW_CONTEXT", "KW_AND",
		"KW_OR", "KW_NOT", "CLEAR_OP", "ADD_OP", "REMOVE_OP", "COLON", "COMMA",
		"LPAREN", "RPAREN", "AND_OP", "OR_OP", "IDENT", "WS",
	}
	staticData.RuleNames = []string{
		"root", "command", "createCommand", "createVerb", "createPart", "createOp",
		"createText", "updateCommand", "updateVerb", "targetRef", "operation",
		"filterCommand", "filterVerb", "filterOrExpr", "filterAndExpr", "filterNotExpr",
		"filterAtom", "filterPredicate", "filterFieldPredicate", "filterTagPredicate",
		"filterTextPredicate", "filterValue", "filterValueWord", "orOp", "andOp",
		"notOp", "viewCommand", "viewTarget", "contextCommand", "contextArg",
		"setOp", "addFieldOp", "removeFieldOp", "clearOp", "tagOp", "opValue",
		"opValueWord", "ident",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// UghParserInit initializes any static state used to implement UghParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewUghParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func UghParserInit() {
	staticData := &UghParserParserStaticData
	staticData.once.Do(ughparserParserInit)
}

// NewUghParser produces a new parser instance for the optional input antlr.TokenStream.
func NewUghParser(input antlr.TokenStream) *UghParser {
	UghParserInit()
	this := new(UghParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &UghParserParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "UghParser.g4"

	return this
}

// UghParser tokens.
const (
	UghParserEOF                = antlr.TokenEOF
	UghParserQUOTED             = 1
	UghParserHASH_NUMBER        = 2
	UghParserPROJECT_TAG        = 3
	UghParserCONTEXT_TAG        = 4
	UghParserPROJECT_TAG_PREFIX = 5
	UghParserCONTEXT_TAG_PREFIX = 6
	UghParserSET_FIELD          = 7
	UghParserADD_FIELD          = 8
	UghParserREMOVE_FIELD       = 9
	UghParserCLEAR_FIELD        = 10
	UghParserKW_ADD             = 11
	UghParserKW_CREATE          = 12
	UghParserKW_NEW             = 13
	UghParserKW_SET             = 14
	UghParserKW_EDIT            = 15
	UghParserKW_UPDATE          = 16
	UghParserKW_FIND            = 17
	UghParserKW_SHOW            = 18
	UghParserKW_LIST            = 19
	UghParserKW_FILTER          = 20
	UghParserKW_VIEW            = 21
	UghParserKW_CONTEXT         = 22
	UghParserKW_AND             = 23
	UghParserKW_OR              = 24
	UghParserKW_NOT             = 25
	UghParserCLEAR_OP           = 26
	UghParserADD_OP             = 27
	UghParserREMOVE_OP          = 28
	UghParserCOLON              = 29
	UghParserCOMMA              = 30
	UghParserLPAREN             = 31
	UghParserRPAREN             = 32
	UghParserAND_OP             = 33
	UghParserOR_OP              = 34
	UghParserIDENT              = 35
	UghParserWS                 = 36
)

// UghParser rules.
const (
	UghParserRULE_root                 = 0
	UghParserRULE_command              = 1
	UghParserRULE_createCommand        = 2
	UghParserRULE_createVerb           = 3
	UghParserRULE_createPart           = 4
	UghParserRULE_createOp             = 5
	UghParserRULE_createText           = 6
	UghParserRULE_updateCommand        = 7
	UghParserRULE_updateVerb           = 8
	UghParserRULE_targetRef            = 9
	UghParserRULE_operation            = 10
	UghParserRULE_filterCommand        = 11
	UghParserRULE_filterVerb           = 12
	UghParserRULE_filterOrExpr         = 13
	UghParserRULE_filterAndExpr        = 14
	UghParserRULE_filterNotExpr        = 15
	UghParserRULE_filterAtom           = 16
	UghParserRULE_filterPredicate      = 17
	UghParserRULE_filterFieldPredicate = 18
	UghParserRULE_filterTagPredicate   = 19
	UghParserRULE_filterTextPredicate  = 20
	UghParserRULE_filterValue          = 21
	UghParserRULE_filterValueWord      = 22
	UghParserRULE_orOp                 = 23
	UghParserRULE_andOp                = 24
	UghParserRULE_notOp                = 25
	UghParserRULE_viewCommand          = 26
	UghParserRULE_viewTarget           = 27
	UghParserRULE_contextCommand       = 28
	UghParserRULE_contextArg           = 29
	UghParserRULE_setOp                = 30
	UghParserRULE_addFieldOp           = 31
	UghParserRULE_removeFieldOp        = 32
	UghParserRULE_clearOp              = 33
	UghParserRULE_tagOp                = 34
	UghParserRULE_opValue              = 35
	UghParserRULE_opValueWord          = 36
	UghParserRULE_ident                = 37
)

// IRootContext is an interface to support dynamic dispatch.
type IRootContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Command() ICommandContext
	EOF() antlr.TerminalNode

	// IsRootContext differentiates from other interfaces.
	IsRootContext()
}

type RootContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyRootContext() *RootContext {
	var p = new(RootContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = UghParserRULE_root
	return p
}

func InitEmptyRootContext(p *RootContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = UghParserRULE_root
}

func (*RootContext) IsRootContext() {}

func NewRootContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *RootContext {
	var p = new(RootContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = UghParserRULE_root

	return p
}

func (s *RootContext) GetParser() antlr.Parser { return s.parser }

func (s *RootContext) Command() ICommandContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ICommandContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ICommandContext)
}

func (s *RootContext) EOF() antlr.TerminalNode {
	return s.GetToken(UghParserEOF, 0)
}

func (s *RootContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *RootContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *RootContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(UghParserListener); ok {
		listenerT.EnterRoot(s)
	}
}

func (s *RootContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(UghParserListener); ok {
		listenerT.ExitRoot(s)
	}
}

func (s *RootContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case UghParserVisitor:
		return t.VisitRoot(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *UghParser) Root() (localctx IRootContext) {
	localctx = NewRootContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, UghParserRULE_root)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(76)
		p.Command()
	}
	{
		p.SetState(77)
		p.Match(UghParserEOF)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ICommandContext is an interface to support dynamic dispatch.
type ICommandContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	CreateCommand() ICreateCommandContext
	UpdateCommand() IUpdateCommandContext
	FilterCommand() IFilterCommandContext
	ViewCommand() IViewCommandContext
	ContextCommand() IContextCommandContext

	// IsCommandContext differentiates from other interfaces.
	IsCommandContext()
}

type CommandContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyCommandContext() *CommandContext {
	var p = new(CommandContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = UghParserRULE_command
	return p
}

func InitEmptyCommandContext(p *CommandContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = UghParserRULE_command
}

func (*CommandContext) IsCommandContext() {}

func NewCommandContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *CommandContext {
	var p = new(CommandContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = UghParserRULE_command

	return p
}

func (s *CommandContext) GetParser() antlr.Parser { return s.parser }

func (s *CommandContext) CreateCommand() ICreateCommandContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ICreateCommandContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ICreateCommandContext)
}

func (s *CommandContext) UpdateCommand() IUpdateCommandContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IUpdateCommandContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IUpdateCommandContext)
}

func (s *CommandContext) FilterCommand() IFilterCommandContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFilterCommandContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFilterCommandContext)
}

func (s *CommandContext) ViewCommand() IViewCommandContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IViewCommandContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IViewCommandContext)
}

func (s *CommandContext) ContextCommand() IContextCommandContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IContextCommandContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IContextCommandContext)
}

func (s *CommandContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *CommandContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *CommandContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(UghParserListener); ok {
		listenerT.EnterCommand(s)
	}
}

func (s *CommandContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(UghParserListener); ok {
		listenerT.ExitCommand(s)
	}
}

func (s *CommandContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case UghParserVisitor:
		return t.VisitCommand(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *UghParser) Command() (localctx ICommandContext) {
	localctx = NewCommandContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, UghParserRULE_command)
	p.SetState(84)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetTokenStream().LA(1) {
	case UghParserKW_ADD, UghParserKW_CREATE, UghParserKW_NEW:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(79)
			p.CreateCommand()
		}

	case UghParserKW_SET, UghParserKW_EDIT, UghParserKW_UPDATE:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(80)
			p.UpdateCommand()
		}

	case UghParserKW_FIND, UghParserKW_SHOW, UghParserKW_LIST, UghParserKW_FILTER:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(81)
			p.FilterCommand()
		}

	case UghParserKW_VIEW:
		p.EnterOuterAlt(localctx, 4)
		{
			p.SetState(82)
			p.ViewCommand()
		}

	case UghParserKW_CONTEXT:
		p.EnterOuterAlt(localctx, 5)
		{
			p.SetState(83)
			p.ContextCommand()
		}

	default:
		p.SetError(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ICreateCommandContext is an interface to support dynamic dispatch.
type ICreateCommandContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	CreateVerb() ICreateVerbContext
	AllCreatePart() []ICreatePartContext
	CreatePart(i int) ICreatePartContext

	// IsCreateCommandContext differentiates from other interfaces.
	IsCreateCommandContext()
}

type CreateCommandContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyCreateCommandContext() *CreateCommandContext {
	var p = new(CreateCommandContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = UghParserRULE_createCommand
	return p
}

func InitEmptyCreateCommandContext(p *CreateCommandContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = UghParserRULE_createCommand
}

func (*CreateCommandContext) IsCreateCommandContext() {}

func NewCreateCommandContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *CreateCommandContext {
	var p = new(CreateCommandContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = UghParserRULE_createCommand

	return p
}

func (s *CreateCommandContext) GetParser() antlr.Parser { return s.parser }

func (s *CreateCommandContext) CreateVerb() ICreateVerbContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ICreateVerbContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ICreateVerbContext)
}

func (s *CreateCommandContext) AllCreatePart() []ICreatePartContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(ICreatePartContext); ok {
			len++
		}
	}

	tst := make([]ICreatePartContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(ICreatePartContext); ok {
			tst[i] = t.(ICreatePartContext)
			i++
		}
	}

	return tst
}

func (s *CreateCommandContext) CreatePart(i int) ICreatePartContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ICreatePartContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(ICreatePartContext)
}

func (s *CreateCommandContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *CreateCommandContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *CreateCommandContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(UghParserListener); ok {
		listenerT.EnterCreateCommand(s)
	}
}

func (s *CreateCommandContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(UghParserListener); ok {
		listenerT.ExitCreateCommand(s)
	}
}

func (s *CreateCommandContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case UghParserVisitor:
		return t.VisitCreateCommand(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *UghParser) CreateCommand() (localctx ICreateCommandContext) {
	localctx = NewCreateCommandContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, UghParserRULE_createCommand)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(86)
		p.CreateVerb()
	}
	p.SetState(90)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for (int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&35567697822) != 0 {
		{
			p.SetState(87)
			p.CreatePart()
		}

		p.SetState(92)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ICreateVerbContext is an interface to support dynamic dispatch.
type ICreateVerbContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	KW_ADD() antlr.TerminalNode
	KW_CREATE() antlr.TerminalNode
	KW_NEW() antlr.TerminalNode

	// IsCreateVerbContext differentiates from other interfaces.
	IsCreateVerbContext()
}

type CreateVerbContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyCreateVerbContext() *CreateVerbContext {
	var p = new(CreateVerbContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = UghParserRULE_createVerb
	return p
}

func InitEmptyCreateVerbContext(p *CreateVerbContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = UghParserRULE_createVerb
}

func (*CreateVerbContext) IsCreateVerbContext() {}

func NewCreateVerbContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *CreateVerbContext {
	var p = new(CreateVerbContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = UghParserRULE_createVerb

	return p
}

func (s *CreateVerbContext) GetParser() antlr.Parser { return s.parser }

func (s *CreateVerbContext) KW_ADD() antlr.TerminalNode {
	return s.GetToken(UghParserKW_ADD, 0)
}

func (s *CreateVerbContext) KW_CREATE() antlr.TerminalNode {
	return s.GetToken(UghParserKW_CREATE, 0)
}

func (s *CreateVerbContext) KW_NEW() antlr.TerminalNode {
	return s.GetToken(UghParserKW_NEW, 0)
}

func (s *CreateVerbContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *CreateVerbContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *CreateVerbContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(UghParserListener); ok {
		listenerT.EnterCreateVerb(s)
	}
}

func (s *CreateVerbContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(UghParserListener); ok {
		listenerT.ExitCreateVerb(s)
	}
}

func (s *CreateVerbContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case UghParserVisitor:
		return t.VisitCreateVerb(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *UghParser) CreateVerb() (localctx ICreateVerbContext) {
	localctx = NewCreateVerbContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, UghParserRULE_createVerb)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(93)
		_la = p.GetTokenStream().LA(1)

		if !((int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&14336) != 0) {
			p.GetErrorHandler().RecoverInline(p)
		} else {
			p.GetErrorHandler().ReportMatch(p)
			p.Consume()
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ICreatePartContext is an interface to support dynamic dispatch.
type ICreatePartContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	CreateOp() ICreateOpContext
	CreateText() ICreateTextContext

	// IsCreatePartContext differentiates from other interfaces.
	IsCreatePartContext()
}

type CreatePartContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyCreatePartContext() *CreatePartContext {
	var p = new(CreatePartContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = UghParserRULE_createPart
	return p
}

func InitEmptyCreatePartContext(p *CreatePartContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = UghParserRULE_createPart
}

func (*CreatePartContext) IsCreatePartContext() {}

func NewCreatePartContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *CreatePartContext {
	var p = new(CreatePartContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = UghParserRULE_createPart

	return p
}

func (s *CreatePartContext) GetParser() antlr.Parser { return s.parser }

func (s *CreatePartContext) CreateOp() ICreateOpContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ICreateOpContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ICreateOpContext)
}

func (s *CreatePartContext) CreateText() ICreateTextContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ICreateTextContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ICreateTextContext)
}

func (s *CreatePartContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *CreatePartContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *CreatePartContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(UghParserListener); ok {
		listenerT.EnterCreatePart(s)
	}
}

func (s *CreatePartContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(UghParserListener); ok {
		listenerT.ExitCreatePart(s)
	}
}

func (s *CreatePartContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case UghParserVisitor:
		return t.VisitCreatePart(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *UghParser) CreatePart() (localctx ICreatePartContext) {
	localctx = NewCreatePartContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, UghParserRULE_createPart)
	p.SetState(97)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetTokenStream().LA(1) {
	case UghParserPROJECT_TAG, UghParserCONTEXT_TAG, UghParserSET_FIELD, UghParserADD_FIELD, UghParserREMOVE_FIELD, UghParserCLEAR_FIELD, UghParserCLEAR_OP:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(95)
			p.CreateOp()
		}

	case UghParserQUOTED, UghParserHASH_NUMBER, UghParserKW_ADD, UghParserKW_CREATE, UghParserKW_NEW, UghParserKW_SET, UghParserKW_EDIT, UghParserKW_UPDATE, UghParserKW_FIND, UghParserKW_SHOW, UghParserKW_LIST, UghParserKW_FILTER, UghParserKW_VIEW, UghParserKW_CONTEXT, UghParserKW_AND, UghParserKW_OR, UghParserKW_NOT, UghParserCOMMA, UghParserIDENT:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(96)
			p.CreateText()
		}

	default:
		p.SetError(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ICreateOpContext is an interface to support dynamic dispatch.
type ICreateOpContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser
